script2msd webui

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -17,6 +17,7 @@
         <a href="/">Home</a>
         <a href="/scheduler">Scheduler</a>
         <a href="/treatmentor">Treatmentor</a>
+        <a href="/script2msd">Script2MSD</a>
     </div>
 
     <div id="content">
@@ -24,6 +25,7 @@
         <ul>
             <li><a href="/scheduler">Scheduler</a></li>
             <li><a href="/treatmentor">Treatmentor</a></li>
+            <li><a href="/script2msd">Script2MSD</a></li>
         </ul>
     </div>
 </body>
