--- a/app/public/scheduler/index.html
+++ b/app/public/scheduler/index.html
@@ -13,6 +13,7 @@
         <a href="/">Home</a>
         <a href="/scheduler">Scheduler</a>
         <a href="/treatmentor">Treatmentor</a>
+        <a href="/script2msd">Script2MSD</a>
     </div>
 
     <div id="content">
